# cuda_practice

./: README.md
array_arithmatics/: README.md
array_arithmatics/add_array/: add_array  add_array.cu
array_arithmatics/multiply_array/: mul_array  mul_array.cu  mularray2d  mularray2d.cu
array_arithmatics/sub_array/: sub_array  sub_array.cu
cpp_stream_yolo8/: CMakeLists.txt  Readme.md  inference.cpp  inference.hpp  main.cpp
search_algos/: random_numbers.txt  search_algo  search_algo.cu
search_algos/rand_num_file_writer/: rand_num_file_writer  rand_num_file_writer.cpp  random_numbers.txt
sort_array/: CMakeLists.txt  sort_array.cu
